--- a/index.html
+++ b/index.html
@@ -1,30 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>George Johnson</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>George Johnson</h1>
-				<p>Some information about me...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+layout: default
+title: George Johnson
+---
+<div class="blurb">
+	<h1>Hi there, I'm George</h1>
+	<p>Read more about my life...</a></p>
+</div><!-- /.blurb -->
