--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: George Johnson
 ---
 <div class="blurb">
 	<h1>Hi there, I'm George</h1>
-	<p>Read more about my life...</a></p>
+	<p>I'm a final year DPhil student at Oxford University.</a></p>
 </div><!-- /.blurb -->
