--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ title: George Johnson
 <div class="blurb">
 	<h1>Hi there, I'm George</h1>
 	<p>I'm a final year DPhil student at Oxford University.</a></p>
+	<p>Here is a list of errata found in the book by <a href="mallinder.github.io/Schwartz.pdf"> Matthew Schwartz</a>.</p>
 </div><!-- /.blurb -->
