--- a/index.html
+++ b/index.html
@@ -7,3 +7,26 @@ title: George Johnson
 	<p>I'm a final year DPhil student at Oxford University.</a></p>
 	<p>Here is a list of errata found in the book by <a href="mallinder.github.io/Schwartz.pdf"> Matthew Schwartz</a>.</p>
 </div><!-- /.blurb -->
+
+<div class="col-md-7">
+        <h3>Education</h3>
+        <ul class="ul-edu fa-ul">
+		
+          <li>
+            <i class="fa-li fas fa-graduation-cap"></i>
+            <div class="description">
+              <p class="course">MASt in Mathematics, 2018</p>
+              <p class="institution">Cambridge</p>
+            </div>
+          </li>
+          
+          <li>
+            <i class="fa-li fas fa-graduation-cap"></i>
+            <div class="description">
+              <p class="course">BSc in Physics and Mathematics, 2017</p>
+              <p class="institution">MIT</p>
+            </div>
+          </li>
+          
+        </ul>
+</div>
