--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: George Johnson
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">MASt in Mathematics, 2018</p>
+              <p class="course">MMath in Mathematics, 2015</p>
               <p class="institution">Cambridge</p>
             </div>
           </li>
@@ -23,8 +23,8 @@ title: George Johnson
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">BSc in Physics and Mathematics, 2017</p>
-              <p class="institution">MIT</p>
+              <p class="course">BA in Natural Sciences, 2014</p>
+              <p class="institution">Cambridge</p>
             </div>
           </li>
           
