--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@ title: George Johnson
 	<p>Here is a list of errata found in the book by <a href="mallinder.github.io/Schwartz.pdf"> Matthew Schwartz</a>.</p>
 </div><!-- /.blurb -->
 
-<div class="col-md-7">
+<div>
         <h3>Education</h3>
-        <ul class="ul-edu fa-ul">
+        <ul>
 		
           <li>
-            <i class="fa-li fas fa-graduation-cap"></i>
-            <div class="description">
+              <div class="description">
               <p class="course">MMath in Mathematics, 2015</p>
               <p class="institution">Cambridge</p>
             </div>
           </li>
           
           <li>
-            <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
               <p class="course">BA in Natural Sciences, 2014</p>
               <p class="institution">Cambridge</p>
