--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: George Johnson
 
 <div>
         <h3>Education</h3>
-        <ul>
+        <ul class="posts">
 		
           <li>
               <div class="description">
