--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ title: George Johnson
 <div class="blurb">
 	<h1>Hi there, I'm George</h1>
 	<p>I'm a final year DPhil student at Oxford University.</a></p>
-	<p>Here is a list of errata found in the book by <a href="mallinder.github.io/Schwartz.pdf"> Matthew Schwartz</a>.</p>
+	<p>Here is a list of errata found in the book Quantum Field Theory and the Standard Model by <a href="mallinder.github.io/Schwartz.pdf"> Matthew Schwartz</a>.</p>
 </div><!-- /.blurb -->
 
 <div>
         <h3>Education</h3>
-        <ul class="posts">
+        <ul>
 		
           <li>
               <div class="description">
