--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: George Johnson
 
 <div class="blurb">
 	<h1>Hi there, I'm George</h1>
-	<p>I'm a final year DPhil student at Oxford University.</a></p>
+	<p>I'm a final year DPhil student at Oxford University.</p>
 	<p>Here is a list of errata found in the book Quantum Field Theory and the Standard Model by <a href="mallinder.github.io/Schwartz.pdf"> Matthew Schwartz</a>.</p>
 </div>
 
