--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@ title: George Johnson
         <ul>
 		
         <li>
-              <p class="course">MMath in Mathematics, 2015</p>
-              <p class="institution">Cambridge</p>
+              <p>MMath in Mathematics, 2015<br>
+              Cambridge</p>
         </li>
           
         <li>
-              <p class="course">BA in Natural Sciences, 2014</p>
-              <p class="institution">Cambridge</p>
+              <p>BA in Natural Sciences, 2014<br>
+              Cambridge</p>
         </li>
           
         </ul>
