--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: George Johnson
 
 <div class="blurb">
 	<h1>Hi there, I'm George</h1>
-	<p>Here is a list of errata found in the book Quantum Field Theory and the Standard Model by <a href="gm-johnson.github.io/Schwartz.pdf"> Matthew Schwartz</a>.</p>
+	<p>Here is a list of errata found in the book Quantum Field Theory and the Standard Model by <a href="gm-johnson.github.io/Schwartz_Errata.pdf"> Matthew Schwartz</a>.</p>
 	<p>Here is a list of errata found in the book Geometry, Topology and Physics by <a href="gm-johnson.github.io/Nakahara_Errata.pdf"> Mikio Nakahara</a>.</p>
 </div>
 </div>
