--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ title: George Johnson
 ---
 
 <div class="blurb">
-	<h1>Hi there, I'm George</h1>
+	<h1>Hi there, I'm George.</h1>
+	
 	<p>Here is a list of errata found in the book Quantum Field Theory and the Standard Model by <a href="gm-johnson.github.io/Schwartz_Errata.pdf"> Matthew Schwartz</a>.</p>
 	<p>Here is a list of errata found in the book Geometry, Topology and Physics by <a href="gm-johnson.github.io/Nakahara_Errata.pdf"> Mikio Nakahara</a>.</p>
 </div>
@@ -17,7 +18,7 @@ title: George Johnson
 	<li>
               <p>PhD in Theoretical Particle Physics<br>
               Oxford</p>
-        </li>
+	</li>
 		
         <li>
               <p>MMath in Mathematics, 2015<br>
