--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@ title: George Johnson
 	<p>Here is a list of errata found in the book Quantum Field Theory and the Standard Model by <a href="gm-johnson.github.io/Schwartz_Errata.pdf"> Matthew Schwartz</a>.</p>
 	<p>Here is a list of errata found in the book Geometry, Topology and Physics by <a href="gm-johnson.github.io/Nakahara_Errata.pdf"> Mikio Nakahara</a>.</p>
 </div>
-</div>
 	
 <div>
         <h3>Education</h3>
         <ul>
+				
+	<li>
+              <p>PhD in Theoretical Particle Physics<br>
+              Oxford</p>
+	</li>
 		
         <li>
               <p>MMath in Mathematics, 2015<br>
