--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: George Johnson
         <ul>
 				
 	<li>
-              <p>PhD in Theoretical Particle Physics<br>
+              <p>PhD in Theoretical Particle Physics, 2020<br>
               Oxford</p>
 	</li>
 		
