--- a/publication/index.html
+++ b/publication/index.html
@@ -23,7 +23,7 @@
   
   
 
-  <meta name="author" content="Nelson Bighetti" />
+  <meta name="author" content="George Johnson" />
 
   
   
@@ -784,7 +784,7 @@
     
 
   <span >
-      Nelson Bighetti</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      George Johnson</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Robert Ford</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
   </span>
   (2013).
