--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="Professor of Artificial Intelligence" />
+  <meta name="description" content="Lecturer in Applied Mathematics" />
 
   
   <link rel="alternate" hreflang="en-us" href="/404.html" />
@@ -292,7 +292,7 @@
   <meta property="og:site_name" content="Academic" />
   <meta property="og:url" content="/404.html" />
   <meta property="og:title" content="404 Page not found | Academic" />
-  <meta property="og:description" content="Professor of Artificial Intelligence" /><meta property="og:image" content="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png" />
+  <meta property="og:description" content="Lecturer in Applied Mathematics" /><meta property="og:image" content="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png" />
     <meta property="twitter:image" content="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
   
     
