--- a/project/index.html
+++ b/project/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="Professor of Artificial Intelligence" />
+  <meta name="description" content="Lecturer in Applied Mathematics" />
 
   
   <link rel="alternate" hreflang="en-us" href="/project/" />
@@ -294,7 +294,7 @@
   <meta property="og:site_name" content="George Johnson" />
   <meta property="og:url" content="/project/" />
   <meta property="og:title" content="Projects | George Johnson" />
-  <meta property="og:description" content="Professor of Artificial Intelligence" /><meta property="og:image" content="/media/icon_hu93e530da64041668647a07b4cb8d3684_16369_512x512_fill_lanczos_center_2.png" />
+  <meta property="og:description" content="Lecturer in Applied Mathematics" /><meta property="og:image" content="/media/icon_hu93e530da64041668647a07b4cb8d3684_16369_512x512_fill_lanczos_center_2.png" />
     <meta property="twitter:image" content="/media/icon_hu93e530da64041668647a07b4cb8d3684_16369_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
   
     
