--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -1077,8 +1077,8 @@
 
     <div class="media-body">
       <h5 class="card-title">George Johnson</h5>
-      <h6 class="card-subtitle">Professor of Artificial Intelligence</h6>
-      <p class="card-text">My research interests include distributed robotics, mobile computing and programmable matter.</p>
+      <h6 class="card-subtitle">Lecturer in Applied Mathematics</h6>
+      <p class="card-text">My research interests include theoretical aspects of black holes and their connections with cosmology.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
