--- a/note/example/index.html
+++ b/note/example/index.html
@@ -248,7 +248,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.5bad3495eb1e6789c3c8512d56434a92.css" />
+  <link rel="stylesheet" href="/css/wowchemy.ff9cb5c5ac09a4809b6c798075dbcd3f.css" />
 
   
 
@@ -684,6 +684,8 @@
 
   
   
+    
+  
 
 
 <div class="article-container pt-3">
@@ -734,9 +736,9 @@
 </div>
 
 
-<div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 400px; max-height: 230px;">
+<div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 477px;">
   <div style="position: relative">
-    <img src="/note/example/featured.jpg" alt="" class="featured-image">
+    <img src="/note/example/featured_hue41ed98fb9cfdf0e50b6238e3b723a43_224572_720x0_resize_q75_lanczos.jpg" alt="" class="featured-image">
     
   </div>
 </div>
