--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#posts" data-target="#posts"><span>Posts</span></a>
+          <a class="nav-link " href="/#blog" data-target="#blog"><span>Blog</span></a>
         </li>
 
         
@@ -1362,7 +1362,7 @@
   
 
   
-  <section id="posts" class="home-section wg-pages  "  >
+  <section id="blog" class="home-section wg-pages  "  >
    <div class="home-section-bg " ></div>
     <div class="container">
 
