--- a/index.html
+++ b/index.html
@@ -1342,7 +1342,7 @@
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/blog/first/" >A classic coding problem</a>
+      <a href="/blog/first/" >Longest Ascending Subsequence</a>
     </div>
 
     
