--- a/index.html
+++ b/index.html
@@ -1599,7 +1599,7 @@
     
     <a href="/note/schwartz/"  class="summary-link">
       <div class="article-style">
-        Errata for QFT and the Standard Model by Matthew Schwartz.
+        Errata for QFT and the Standard Model by Matthew Schwartz.dr
       </div>
     </a>
     
