--- a/note/schwartz/index.html
+++ b/note/schwartz/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="Errata for QFT and the Standard Model by Matthew Schwartz." />
+  <meta name="description" content="Errata for QFT and the Standard Model by Matthew Schwartz.dr" />
 
   
   <link rel="alternate" hreflang="en-us" href="/note/schwartz/" />
@@ -294,7 +294,7 @@
   <meta property="og:site_name" content="George Johnson" />
   <meta property="og:url" content="/note/schwartz/" />
   <meta property="og:title" content="Schwartz Errata | George Johnson" />
-  <meta property="og:description" content="Errata for QFT and the Standard Model by Matthew Schwartz." /><meta property="og:image" content="/note/schwartz/featured.jpg" />
+  <meta property="og:description" content="Errata for QFT and the Standard Model by Matthew Schwartz.dr" /><meta property="og:image" content="/note/schwartz/featured.jpg" />
     <meta property="twitter:image" content="/note/schwartz/featured.jpg" /><meta property="og:locale" content="en-us" />
   
     
@@ -748,8 +748,8 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tellus ac convallis placerat. Proin tincidunt magna sed ex sollicitudin condimentum. Sed ac faucibus dolor, scelerisque sollicitudin nisi. Cras purus urna, suscipit quis sapien eu, pulvinar tempor diam. Quisque risus orci, mollis id ante sit amet, gravida egestas nisl. Sed ac tempus magna. Proin in dui enim. Donec condimentum, sem id dapibus fringilla, tellus enim condimentum arcu, nec volutpat est felis vel metus. Vestibulum sit amet erat at nulla eleifend gravida.</p>
-<p>$$ \int_{-\infty}^\infty \exp(-x^2)  \mathrm{d}x = \sqrt{\pi}$$</p>
+      <p><a href="/notes/schwartz_errata_may_2021.pdf" target="_blank">Schwartz Errata.</a></p>
+<p>Matthew Schwartz keeps a list of corrections for QFT and the Standard Model on <a href="https://schwartzqft.fas.harvard.edu/corrections" target="_blank" rel="noopener">the book&rsquo;s website</a>. I noticed very few errors from earlier parts of the book that were absent from this list, but in later chapters I found significantly more which hadn&rsquo;t been recorded. I have made my best attempt to log them here.</p>
 
     </div>
 
