--- a/note/schwartz/index.html
+++ b/note/schwartz/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="Errata for QFT and the Standard Model by Matthew Schwartz.dr" />
+  <meta name="description" content="Errata for QFT and the Standard Model by Matthew Schwartz." />
 
   
   <link rel="alternate" hreflang="en-us" href="/note/schwartz/" />
@@ -294,7 +294,7 @@
   <meta property="og:site_name" content="George Johnson" />
   <meta property="og:url" content="/note/schwartz/" />
   <meta property="og:title" content="Schwartz Errata | George Johnson" />
-  <meta property="og:description" content="Errata for QFT and the Standard Model by Matthew Schwartz.dr" /><meta property="og:image" content="/note/schwartz/featured.jpg" />
+  <meta property="og:description" content="Errata for QFT and the Standard Model by Matthew Schwartz." /><meta property="og:image" content="/note/schwartz/featured.jpg" />
     <meta property="twitter:image" content="/note/schwartz/featured.jpg" /><meta property="og:locale" content="en-us" />
   
     
