--- a/note/hatcher/index.html
+++ b/note/hatcher/index.html
@@ -293,9 +293,9 @@
   
   <meta property="og:site_name" content="George Johnson" />
   <meta property="og:url" content="/note/hatcher/" />
-  <meta property="og:title" content="Algebraic Topology Chapter 0 Solutions | George Johnson" />
-  <meta property="og:description" content="Handwritten solutions to problems from the zeroth chapter of Allen Hatcher&#39;s Algebraic Topology" /><meta property="og:image" content="/note/hatcher/featured.jpg" />
-    <meta property="twitter:image" content="/note/hatcher/featured.jpg" /><meta property="og:locale" content="en-us" />
+  <meta property="og:title" content="Algebraic Topology Solutions | George Johnson" />
+  <meta property="og:description" content="Handwritten solutions to problems from the zeroth chapter of Allen Hatcher&#39;s Algebraic Topology" /><meta property="og:image" content="/note/hatcher/featured.png" />
+    <meta property="twitter:image" content="/note/hatcher/featured.png" /><meta property="og:locale" content="en-us" />
   
     
       <meta
@@ -320,7 +320,7 @@
 
 
 
-  <title>Algebraic Topology Chapter 0 Solutions | George Johnson</title>
+  <title>Algebraic Topology Solutions | George Johnson</title>
 </head>
 
 
@@ -689,7 +689,7 @@
 
 
 <div class="article-container pt-3">
-  <h1>Algebraic Topology Chapter 0 Solutions</h1>
+  <h1>Algebraic Topology Solutions</h1>
 
   
 
@@ -738,7 +738,7 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
-    <img src="/note/hatcher/featured_hu4ab4d133bff658944e9e708c30c41342_213430_720x0_resize_q75_lanczos.jpg" alt="" class="featured-image">
+    <img src="/note/hatcher/featured_hu63004c777d8788854c46b102c8abedcb_359059_720x0_resize_lanczos_2.png" alt="" class="featured-image">
     
   </div>
 </div>
@@ -748,8 +748,8 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p><a href="/notes/b5_collection_may_2021.pdf" target="_blank">General Relativity Paper.</a></p>
-<p>These are my solutions.</p>
+      <p><a href="/notes/hatcher_chapter0_solutions.pdf" target="_blank">Chapter 0 Solutions.</a></p>
+<p>These are my solutions to the problems in Chapter 0 of Allen Hatcher&rsquo;s Algebraic Topology. Most questions I solved independently, although for some of the trickier problems I referred to answers on math.stackexchange.com.</p>
 
     </div>
 
