--- a/note/hatcher/index.html
+++ b/note/hatcher/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="Handwritten solutions to problems from the zeroth chapter of Allen Hatcher&#39;s Algebraic Topology" />
+  <meta name="description" content="Handwritten solutions to problems from the zeroth chapter of Allen Hatcher&#39;s Algebraic Topology." />
 
   
   <link rel="alternate" hreflang="en-us" href="/note/hatcher/" />
@@ -294,7 +294,7 @@
   <meta property="og:site_name" content="George Johnson" />
   <meta property="og:url" content="/note/hatcher/" />
   <meta property="og:title" content="Algebraic Topology Solutions | George Johnson" />
-  <meta property="og:description" content="Handwritten solutions to problems from the zeroth chapter of Allen Hatcher&#39;s Algebraic Topology" /><meta property="og:image" content="/note/hatcher/featured.png" />
+  <meta property="og:description" content="Handwritten solutions to problems from the zeroth chapter of Allen Hatcher&#39;s Algebraic Topology." /><meta property="og:image" content="/note/hatcher/featured.png" />
     <meta property="twitter:image" content="/note/hatcher/featured.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -749,7 +749,7 @@
 
     <div class="article-style">
       <p><a href="/notes/hatcher_chapter0_solutions.pdf" target="_blank">Chapter 0 Solutions.</a></p>
-<p>These are my solutions to the problems in Chapter 0 of Allen Hatcher&rsquo;s Algebraic Topology. Most questions I solved independently, although for some of the trickier problems I referred to answers on math.stackexchange.com.</p>
+<p>These are my solutions to the problems in Chapter 0 of Allen Hatcher&rsquo;s Algebraic Topology. Most questions I solved independently, although for some of the trickier problems I referred to answers on math.stackexchange.com. There are almost certainly several errors, and I would appreciate being notified of any mistakes spotted.</p>
 
     </div>
 
