--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,7 @@
     
     <a href="/blog/sm4/"  class="summary-link">
       <div class="article-style">
-        The discrete symmetries C, P, and T.
+        The discrete symmetries $C$, $P$, and $T$, and their relation to the three-generation structure of the theory.
       </div>
     </a>
     
