--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/blog/polyhedron/" >Euler&#39;s Polyhedron Formula and the Gauss-Bonnet theorem.</a>
+      <a href="/blog/polyhedron/" >Euler&#39;s Polyhedron Formula and the Gauss-Bonnet theorem</a>
     </div>
 
     
