--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,7 @@
     
     <a href="/blog/polyhedron/"  class="summary-link">
       <div class="article-style">
-        A beautiful theorem relating the average curvature of some surface to its topology, via properties of polyhedra with that topology.
+        A beautiful theorem relating the average curvature of some surface to a property of polyhedra with the same topology.
       </div>
     </a>
     
