--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@
     
     <a href="/blog/derham/"  class="summary-link">
       <div class="article-style">
-        fff
+        A seemingly simple question in vector calculus, and the topological rabbit hole it leads down.
       </div>
     </a>
     
