--- a/publication/extended/index.html
+++ b/publication/extended/index.html
@@ -949,7 +949,7 @@
 
     <div class="media-body">
       <h5 class="card-title">George Johnson</h5>
-      <h6 class="card-subtitle">Lecturer in Applied Mathematics</h6>
+      <h6 class="card-subtitle">Lecturer and Researcher in Theoretical Physics</h6>
       <p class="card-text">My research interests include theoretical aspects of black holes and their connections with cosmology.</p>
       <ul class="network-icon" aria-hidden="true">
   
