--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>I am a PhD graduate with a love of teaching. My research centres around theoretical aspects of black holes, and in particular the quantum mechanical processes by which they decay. Outside of work I am an avid rock climber.</p>
+      <p>I am a PhD graduate with a passion for teaching. My research centres around theoretical aspects of black holes, and in particular the quantum mechanical processes by which they decay. Outside of work I am an avid rock climber.</p>
 <!--- 
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/media/demo_resume.pdf" target="_blank">CV</a>.--->
 
