--- a/index.html
+++ b/index.html
@@ -2055,7 +2055,7 @@
     
     <a href="/note/hatcher/"  class="summary-link">
       <div class="article-style">
-        Handwritten solutions to problems from the zeroth chapter of Allen Hatcher&rsquo;s Algebraic Topology.
+        Solutions to problems from the zeroth chapter of Allen Hatcher&rsquo;s Algebraic Topology.
       </div>
     </a>
     
