--- a/note/hatcher/index.html
+++ b/note/hatcher/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="Handwritten solutions to problems from the zeroth chapter of Allen Hatcher&#39;s Algebraic Topology." />
+  <meta name="description" content="Solutions to problems from the zeroth chapter of Allen Hatcher&#39;s Algebraic Topology." />
 
   
   <link rel="alternate" hreflang="en-us" href="/note/hatcher/" />
@@ -301,7 +301,7 @@
   <meta property="og:site_name" content="George Johnson" />
   <meta property="og:url" content="/note/hatcher/" />
   <meta property="og:title" content="Algebraic Topology Solutions | George Johnson" />
-  <meta property="og:description" content="Handwritten solutions to problems from the zeroth chapter of Allen Hatcher&#39;s Algebraic Topology." /><meta property="og:image" content="/note/hatcher/featured.png" />
+  <meta property="og:description" content="Solutions to problems from the zeroth chapter of Allen Hatcher&#39;s Algebraic Topology." /><meta property="og:image" content="/note/hatcher/featured.png" />
     <meta property="twitter:image" content="/note/hatcher/featured.png" /><meta property="og:locale" content="en-us" />
   
     
